deploy: DeployDAO/verified-programs-builder@ded04fe8fb03d10f9e90907146161ed820e2ec69

--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: "anchor-cli 0.19.0"
-createdAt: "2022-01-29T23:37:18Z"
+anchorVersion: \anchor-cli 0.20.1\
+createdAt: \2022-03-05T18:28:54Z\
 repo: "saber-hq/pool-manager"
 tag: "v0.1.10"
 slug: "saber-hq__pool-manager-v0.1.10"
