--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: "anchor-cli 0.19.0"
-createdAt: "2022-01-29T13:32:26Z"
+anchorVersion: \anchor-cli 0.20.1\
+createdAt: \2022-03-05T18:30:01Z\
 repo: "QuarryProtocol/gauge"
 tag: "v0.1.12"
 slug: "QuarryProtocol__gauge-v0.1.12"
