--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: "anchor-cli 0.19.0"
-createdAt: "2022-01-29T12:20:31Z"
+anchorVersion: \anchor-cli 0.20.1\
+createdAt: \2022-03-05T18:36:38Z\
 repo: "GokiProtocol/goki"
 tag: "v0.5.5"
 slug: "GokiProtocol__goki-v0.5.5"
