--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: "anchor-cli 0.19.0"
-createdAt: "2022-01-29T12:52:44Z"
+anchorVersion: \anchor-cli 0.19.0\
+createdAt: \2022-03-05T18:40:01Z\
 repo: "TribecaHQ/tribeca"
 tag: "v0.3.0"
 slug: "TribecaHQ__tribeca-v0.3.0"
