--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: "anchor-cli 0.19.0"
-createdAt: "2022-01-29T12:17:40Z"
+anchorVersion: \anchor-cli 0.20.1\
+createdAt: \2022-03-05T18:41:09Z\
 repo: "VenkoApp/venko"
 tag: "v0.1.1"
 slug: "VenkoApp__venko-v0.1.1"
