--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: "anchor-cli 0.19.0"
-createdAt: "2022-01-29T12:43:09Z"
+anchorVersion: \anchor-cli 0.19.0\
+createdAt: \2022-03-05T18:49:25Z\
 repo: "CrateProtocol/crate"
 tag: "v0.4.0"
 slug: "CrateProtocol__crate-v0.4.0"
