--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: "anchor-cli 0.19.0"
-createdAt: "2022-01-29T12:26:15Z"
+anchorVersion: \anchor-cli 0.19.0\
+createdAt: \2022-03-05T18:50:52Z\
 repo: "arrowprotocol/arrow"
 tag: "v0.1.9"
 slug: "arrowprotocol__arrow-v0.1.9"
