--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: "anchor-cli 0.19.0"
-createdAt: "2022-01-29T12:23:28Z"
+anchorVersion: \anchor-cli 0.20.1\
+createdAt: \2022-03-05T18:51:02Z\
 repo: "saber-hq/merkle-distributor"
 tag: "v0.2.6"
 slug: "saber-hq__merkle-distributor-v0.2.6"
