--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: "anchor-cli 0.19.0"
-createdAt: "2022-01-29T12:02:09Z"
+anchorVersion: \anchor-cli 0.19.0\
+createdAt: \2022-03-05T18:53:51Z\
 repo: "cashioapp/cashio"
 tag: "v0.1.4"
 slug: "cashioapp__cashio-v0.1.4"
