--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: "anchor-cli 0.19.0"
-createdAt: "2022-01-29T13:20:52Z"
+anchorVersion: \anchor-cli 0.19.0\
+createdAt: \2022-03-05T19:21:19Z\
 repo: "saber-hq/saber-periphery"
 tag: "v1.0.7"
 slug: "saber-hq__saber-periphery-v1.0.7"
