--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: "anchor-cli 0.19.0"
-createdAt: "2022-02-16T01:13:16Z"
+anchorVersion: \anchor-cli 0.20.1\
+createdAt: \2022-03-05T19:29:26Z\
 repo: "QuarryProtocol/quarry"
 tag: "v2.0.1"
 slug: "QuarryProtocol__quarry-v2.0.1"
