--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: "anchor-cli 0.19.0"
-createdAt: "2022-01-29T12:36:13Z"
+anchorVersion: \anchor-cli 0.18.2\
+createdAt: \2022-03-05T19:53:34Z\
 repo: "SenchaHQ/sencha"
 tag: "v0.9.3"
 slug: "SenchaHQ__sencha-v0.9.3"
