--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: "anchor-cli 0.19.0"
-createdAt: "2022-01-29T12:38:15Z"
+anchorVersion: \anchor-cli 0.18.2\
+createdAt: \2022-03-06T03:30:17Z\
 repo: "GokiProtocol/goki"
 tag: "v0.3.1"
 slug: "GokiProtocol__goki-v0.3.1"
