--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: "anchor-cli 0.19.0"
-createdAt: "2022-01-29T12:52:05Z"
+anchorVersion: \anchor-cli 0.18.2\
+createdAt: \2022-03-06T03:34:56Z\
 repo: "QuarryProtocol/quarry"
 tag: "v1.10.5"
 slug: "QuarryProtocol__quarry-v1.10.5"
