--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.19.0\
-createdAt: \2022-03-06T08:04:15Z\
+anchorVersion: "anchor-cli 0.19.0"
+createdAt: "2022-03-06T08:30:56Z"
 repo: "saber-hq/stable-swap"
 tag: "v1.6.7"
 slug: "saber-hq__stable-swap-v1.6.7"
