deploy: DeployDAO/verified-programs-builder@263275b9970331492b173d9661ee32d4c92f410a

--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.22.0\
-createdAt: \2022-03-06T08:16:17Z\
+anchorVersion: "anchor-cli 0.22.0"
+createdAt: "2022-03-06T08:35:36Z"
 repo: "TribecaHQ/save"
 tag: "v0.1.2"
 slug: "TribecaHQ__save-v0.1.2"
