--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.18.2\
-createdAt: \2022-03-06T08:19:34Z\
+anchorVersion: "anchor-cli 0.18.2"
+createdAt: "2022-03-06T08:38:11Z"
 repo: "GokiProtocol/goki"
 tag: "v0.4.0"
 slug: "GokiProtocol__goki-v0.4.0"
