deploy: DeployDAO/verified-programs-builder@263275b9970331492b173d9661ee32d4c92f410a

--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.18.2\
-createdAt: \2022-03-06T08:09:33Z\
+anchorVersion: "anchor-cli 0.18.2"
+createdAt: "2022-03-06T08:38:29Z"
 repo: "QuarryProtocol/quarry"
 tag: "v1.10.2"
 slug: "QuarryProtocol__quarry-v1.10.2"
