--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.20.1\
-createdAt: \2022-03-06T08:15:32Z\
+anchorVersion: "anchor-cli 0.20.1"
+createdAt: "2022-03-06T08:41:10Z"
 repo: "saber-hq/snapshots"
 tag: "v0.1.0"
 slug: "saber-hq__snapshots-v0.1.0"
