deploy: DeployDAO/verified-programs-builder@263275b9970331492b173d9661ee32d4c92f410a

--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.22.0\
-createdAt: \2022-03-06T07:53:36Z\
+anchorVersion: "anchor-cli 0.22.0"
+createdAt: "2022-03-06T08:55:33Z"
 repo: "saber-hq/stable-swap"
 tag: "v1.7.0"
 slug: "saber-hq__stable-swap-v1.7.0"
