--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.22.0\
-createdAt: \2022-03-06T07:55:30Z\
+anchorVersion: "anchor-cli 0.22.0"
+createdAt: "2022-03-06T09:00:01Z"
 repo: "TribecaHQ/tribeca"
 tag: "v0.5.4"
 slug: "TribecaHQ__tribeca-v0.5.4"
