deploy: DeployDAO/verified-programs-builder@263275b9970331492b173d9661ee32d4c92f410a

--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.20.1\
-createdAt: \2022-03-06T07:43:31Z\
+anchorVersion: "anchor-cli 0.20.1"
+createdAt: "2022-03-06T09:01:25Z"
 repo: "VenkoApp/venko"
 tag: "v0.1.1"
 slug: "VenkoApp__venko-v0.1.1"
