--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.20.1\
-createdAt: \2022-03-06T08:22:58Z\
+anchorVersion: "anchor-cli 0.20.1"
+createdAt: "2022-03-06T09:01:45Z"
 repo: "QuarryProtocol/gauge"
 tag: "v0.1.3"
 slug: "QuarryProtocol__gauge-v0.1.3"
