--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.19.0\
-createdAt: \2022-03-06T08:05:10Z\
+anchorVersion: "anchor-cli 0.19.0"
+createdAt: "2022-03-06T09:02:11Z"
 repo: "TribecaHQ/tribeca"
 tag: "v0.3.0"
 slug: "TribecaHQ__tribeca-v0.3.0"
