--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.20.1\
-createdAt: \2022-03-06T08:00:14Z\
+anchorVersion: "anchor-cli 0.20.1"
+createdAt: "2022-03-06T09:05:16Z"
 repo: "saber-hq/pool-manager"
 tag: "v0.1.10"
 slug: "saber-hq__pool-manager-v0.1.10"
