--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.19.0\
-createdAt: \2022-03-06T09:02:43Z\
+anchorVersion: "anchor-cli 0.19.0"
+createdAt: "2022-03-06T09:06:47Z"
 repo: "saber-hq/saber-periphery"
 tag: "v1.0.7"
 slug: "saber-hq__saber-periphery-v1.0.7"
