--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.19.0\
-createdAt: \2022-03-06T07:48:02Z\
+anchorVersion: "anchor-cli 0.19.0"
+createdAt: "2022-03-06T09:09:42Z"
 repo: "arrowprotocol/arrow"
 tag: "v0.1.8"
 slug: "arrowprotocol__arrow-v0.1.8"
