--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.20.1\
-createdAt: \2022-03-06T07:55:20Z\
+anchorVersion: "anchor-cli 0.20.1"
+createdAt: "2022-03-06T09:10:24Z"
 repo: "VenkoApp/venko"
 tag: "v0.1.0"
 slug: "VenkoApp__venko-v0.1.0"
