--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.22.0\
-createdAt: \2022-03-06T08:20:56Z\
+anchorVersion: "anchor-cli 0.22.0"
+createdAt: "2022-03-06T09:13:45Z"
 repo: "saber-hq/snapshots"
 tag: "v0.2.5"
 slug: "saber-hq__snapshots-v0.2.5"
