deploy: DeployDAO/verified-programs-builder@263275b9970331492b173d9661ee32d4c92f410a

--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.22.0\
-createdAt: \2022-03-06T07:46:56Z\
+anchorVersion: "anchor-cli 0.22.0"
+createdAt: "2022-03-06T09:14:07Z"
 repo: "TribecaHQ/permalock"
 tag: "v0.1.4"
 slug: "TribecaHQ__permalock-v0.1.4"
