--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.19.0\
-createdAt: \2022-03-06T08:46:23Z\
+anchorVersion: "anchor-cli 0.19.0"
+createdAt: "2022-03-06T09:59:48Z"
 repo: "QuarryProtocol/quarry"
 tag: "v1.11.3"
 slug: "QuarryProtocol__quarry-v1.11.3"
