--- a/build-info.yml
+++ b/build-info.yml
@@ -1,5 +1,5 @@
-anchorVersion: \anchor-cli 0.19.0\
-createdAt: \2022-03-06T08:33:10Z\
+anchorVersion: "anchor-cli 0.19.0"
+createdAt: "2022-03-06T10:00:27Z"
 repo: "saber-hq/saber-periphery"
 tag: "v1.0.5"
 slug: "saber-hq__saber-periphery-v1.0.5"
