--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,7 +37,8 @@ jobs:
 
 -RaDzikalbonie: Setup .NET Core SDK
   uses:actions/setup-dotnet@v3.0.3
-  with:
+
+Working with:
     # Optional SDK version(s) to use. If not provided, will install global.json version when available. Examples: 2.2.104, 3.1, 3.1.x, 3.x
     dotnet-version: # optional
     # Optional quality of the build. The possible values are: daily, signed, validated, preview, ga.
