--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,8 +35,7 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
 
--RaDzikalbonie: Setup .NET Core SDK
-  uses:actions/setup-dotnet@v3.0.3
+Setup .NET Core SDK
 
 Working with:
     # Optional SDK version(s) to use. If not provided, will install global.json version when available. Examples: 2.2.104, 3.1, 3.1.x, 3.x
